--- a/html/src/index.html
+++ b/html/src/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Html</title>
+  <title>q - Life Organizer</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="q.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root></app-root>
+  <app-login><img class="loading" src="assets/radio.gif" alt="Image not loaded. Loading..."></app-login>
 </body>
 </html>
