--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>q - Life Organization</title>
+    <title>q. life, organized.</title>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
