Changes the iphone text to white so it's readable. Might instead want to reposition text or change styling instead

--- a/html/index.html
+++ b/html/index.html
@@ -115,8 +115,8 @@
 			    </div>
 			    <div class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
 				    <hr  class="line blue">
-				    <h3>Work</h3>
-				    <p>Iterates work tasks in a way where long-term goals
+				    <h3 class="white">Work</h3>
+				    <p class="white">Iterates work tasks in a way where long-term goals
                are achievable step by step.</p>
 			    </div>
 			    <div class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
