--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
   <meta charset="utf-8">
-  <title>q.</title>
+  <title>q - Life Organizer</title>
   <meta name="keywords" content="">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -113,7 +113,7 @@
             useful for collaboration, and organizing the tasks
             in the most efficient way.</p>
 			    </div>
-			    <div class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
+			    <div class="col-sm-4 wow fadeIn" data-wow-delay="0.8s" style="background-color: rgba(0,0,0,.55)">
 				    <hr  class="line blue">
 				    <h3 class="white">Work</h3>
 				    <p class="white">Iterates work tasks in a way where long-term goals
