Fixed links so page redirects in page (javascript magic) fixed some css styling for readablity

--- a/html/index.html
+++ b/html/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="q_bootstrap_todo/index.html" class="scroll">Queue</a></li>
+            <li><a href="javascript:void(open('q_bootstrap_todo/index.html','_self'))">Queue</a></li>
             <li><a href="#">Account</a></li>
           </ul>
         </div><!--/.navbar-collapse -->
@@ -54,7 +54,8 @@
             <a href="index.html"><img src="img/q3.png" alt="Logo"></a>
           </div>
           <div class="col-xs-6 signin text-right navbar-nav">
-            <a href="q_bootstrap_todo/index.html" class="scroll">Queue</a>&nbsp; &nbsp;<a href="#">Account</a>
+            <a href="javascript:void(open('q_bootstrap_todo/index.html','_top'))">Queue</a>
+            <a href="#">Account</a>
           </div>
         </div>
 
@@ -106,21 +107,21 @@
     <section id="main-info" class="pad-xl">
 	    <div class="container">
 		    <div class="row">
-			    <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
+			    <div class="iphonetext" data-wow-delay="0.4s">
 				    <hr class="line purple">
 				    <h3>School</h3>
 				    <p>Categorizing and compartmentalizing project tasks,
             useful for collaboration, and organizing the tasks
             in the most efficient way.</p>
 			    </div>
-			    <div class="col-sm-4 wow fadeIn" data-wow-delay="0.8s" style="background-color: rgba(0,0,0,.55)">
-				    <hr  class="line blue">
-				    <h3 class="white">Work</h3>
-				    <p class="white">Iterates work tasks in a way where long-term goals
+			    <div class="iphonetext" data-wow-delay="0.8s">
+				    <hr class="line blue">
+				    <h3>Work</h3>
+				    <p>Iterates work tasks in a way where long-term goals
                are achievable step by step.</p>
 			    </div>
-			    <div class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
-				    <hr  class="line yellow">
+			    <div class="iphonetext" data-wow-delay="1.2s">
+				    <hr class="line yellow">
 				    <h3>Daily tasks</h3>
 				    <p>Works to keep your professional life sorted from
                personal. Allows for simpler life tasks to be at your
