--- a/html/q_bootstrap_todo/index.html
+++ b/html/q_bootstrap_todo/index.html
@@ -2,34 +2,49 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Simple Bootstrap To-Do List Template</title>
-  
-  
-  
-      <link rel="stylesheet" href="css/style.css">
+  <title>q - Life Organizer</title>
+  <link rel="stylesheet" href="../css/font-awesome.min.css">
+  <link rel="stylesheet" href="../css/animate.css">
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <link rel="stylesheet" href="../css/main.css">
+  <link href='http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900|Montserrat:400,700' rel='stylesheet' type='text/css'>
 
-  
+  <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/jquery-1.11.0.min.js"></script>
+  <script src="../js/main.js"></script>
+  <script src="../js/modernizr-2.7.1.js"></script>
+  <script src="../js/wow.min.js"></script>
 </head>
 
 <body>
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-
-<body>
-    <div class="form-group">
-      <h1>To-Do <small>List</small></h1>
-    <form role="form">
-        <input type="text" class="form-control" placeholder="Your Task" name="task">
-    </form>
-    <button type="button" class="btn btn btn-primary">Add</button>
+  <header>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-6">
+          <a href="index.html"><img src="../img/q3.png" alt="Logo"></a>
         </div>
-        <div></div>
-    <ul class="list-unstyled" id="todo"></ul>
-</body>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+        <div class="col-xs-6 signin text-right navbar-nav">
+          <a href="javascript:void(open('../index.html','_top'))">Home Page</a>
+          <a href="#">Account</a>
+        </div>
+      </div>
 
-    <script src="js/index.js"></script>
-
+      <div class="row header-info">
+        <div class="col-sm-10 col-sm-offset-1 text-center">
+          <h1 class="wow fadeIn">Your q</h1>
+          <br />
+          <form role="form">
+            <p> Title: <input type="text" name="titlebox" value="title"></p>
+            <p> Content: <input type="text" name="contentbox" value="your content here"></p>
+            <p> Priority: <input type="text" name="prioritybox" value="1"></p>
+            <p> Due date: <input type="text" name="datebox" value="2016-11-13"></p>
+          </form>
+          <input class="btn btn-secondary btn-lg scroll" type="button" name="button" value="Add Todo Item to Database" onClick="doInsert(this.form)">
+        </div>
+      </div>
+    </div>
+  </header>
 </body>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src="js/index.js"></script>
 </html>
