Created log in page, not sure how to continue with passing of information between pages. Redirects, styling, and content should be up to snuff now. All we have to do is get information passed around.

--- a/html/index.html
+++ b/html/index.html
@@ -35,7 +35,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="javascript:void(open('q_bootstrap_todo/index.html','_self'))">Queue</a></li>
-            <li><a href="#">Account</a></li>
+            <li><a href="javascript:void(open('q_login/index.html','_self'))">Account</a></li>
           </ul>
         </div><!--/.navbar-collapse -->
       </div>
@@ -49,7 +49,7 @@
           </div>
           <div class="col-xs-6 signin text-right navbar-nav">
             <a href="javascript:void(open('q_bootstrap_todo/index.html','_top'))">Queue</a>
-            <a href="#">Account</a>
+            <a href="javascript:void(open('q_login/index.html','_self'))">Account</a>
           </div>
         </div>
 
@@ -93,7 +93,7 @@
         </div>
 
         <div class="iphone wow fadeInUp" data-wow-delay="1s">
-	        <img src="img/iphone.png">
+	        <img src="img/iphone1.png">
         </div>
       </div>
     </section>
@@ -198,7 +198,7 @@
 
       </div>
     </footer>
-ß
+
     <!-- Javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
