--- a/html/q_login/index.html
+++ b/html/q_login/index.html
@@ -16,7 +16,6 @@
   <script src="../js/wow.min.js"></script>
   <script src="js/index.js"></script>
 </head>
-
 <body>
   <header>
     <div class="container">
@@ -32,20 +31,18 @@
 
       <div class="row header-info" style="background-color: rgba(0,0,0,.3); padding-bottom: 3em">
         <div class="col-sm-10 col-sm-offset-1 text-center">
-          <h1 class="wow fadeIn">Your q</h1>
+          <h1 class="wow fadeIn">Login</h1>
           <br />
-          <form role="form" class="todo-form">
-            <p> Title: <input type="text" name="titlebox" value="Easy name for it?"></p>
-            <p> Content: <input type="text" name="contentbox" value="What is it?"></p>
-            <p> Priority: <input type="text" name="prioritybox" value="How important is it?"></p>
-            <p> Due date: <input type="text" name="datebox" value="YYYY-MM-DD"></p>
+          <form name="loginform" action="" method="get" class="todo-form">
+              <p>Enter User Info:</p>
+              </br>
+              <p><input type="text" name="usernamebox" value="username"></p>
+              <p><input type="password" name="passwordbox" value="password"></p>
+              <input class="btn btn-secondary btn-lg scroll" type="button" name="button" value="Log in!" onClick="doLogin(this.form)">
+              <p id="loginresp" style="padding-top: 1.5em;">Log in, first!</p>
           </form>
-          <input class="btn btn-secondary btn-lg scroll" type="button" name="button" value="Add Todo Item to Database" onClick="doInsert(this.form)">
         </div>
       </div>
     </div>
   </header>
-</body>
-<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src="js/index.js"></script>
 </html>
