Getting scripts initialized, but passing baton over to Ryan and Nic.

--- a/html/index.html
+++ b/html/index.html
@@ -68,7 +68,7 @@
                     <a href="#be-the-first" class="btn btn-secondary btn-lg scroll">Learn More</a>
                   </div>
                   <div class="col-xs-6 text-left wow fadeInUp" data-wow-delay="1.4s">
-                    <a href="#invite" class="btn btn-primary btn-lg scroll">Request Invite</a>
+                    <a href="#invite" class="btn btn-primary btn-lg scroll">Get Started</a>
                   </div>
                 </div><!--End Button Row-->
               </div>
@@ -130,7 +130,7 @@
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2 text-center">
             <i class="fa fa-envelope-o margin-40"></i>
-            <h2 class="black">Get the invite</h2>
+            <h2 class="black">Get Started</h2>
             <br />
             <p class="black">Get your life together before it's too late.</p>
             <br />
@@ -140,8 +140,9 @@
                 <form role="form">
                   <div class="form-group">
                     <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter Email">
+                    <input type="password" class="form-control" id="exampleInputPassword" placeholder="Make a Password">
                   </div>
-                  <button type="submit" class="btn btn-primary btn-lg">Request Invite</button>
+                  <button type="submit" class="btn btn-primary btn-lg" onclick="create_user(form)">Create Account</button>
                 </form>
               </div>
             </div><!--End Form row-->
