Added margins so the buttons on the top right are more separated and readable

--- a/html/index.html
+++ b/html/index.html
@@ -48,7 +48,7 @@
             <a href="index.html"><img src="img/q3.png" alt="Logo"></a>
           </div>
           <div class="col-xs-6 signin text-right navbar-nav">
-            <a href="javascript:void(open('q_bootstrap_todo/index.html','_top'))">Queue</a>
+            <a class="margin-20right" href="javascript:void(open('q_bootstrap_todo/index.html','_top'))">Queue</a>
             <a href="javascript:void(open('q_login/index.html','_self'))">Account</a>
           </div>
         </div>
