--- a/html/q_login/index.html
+++ b/html/q_login/index.html
@@ -24,7 +24,7 @@
           <a href="index.html"><img src="../img/q3.png" alt="Logo"></a>
         </div>
         <div class="col-xs-6 signin text-right navbar-nav">
-          <a href="javascript:void(open('../index.html','_top'))">Home Page</a>
+          <a class="margin-20right" href="javascript:void(open('../index.html','_top'))">Home</a>
           <a href="#">Account</a>
         </div>
       </div>
