Stripped message list page and added core functionality. Aside from logout and some error checking, q works... kinda.

--- a/html/index.html
+++ b/html/index.html
@@ -78,6 +78,8 @@
         </div>
       </div>
     </header>
+    
+    <div id="messagebox"></div>
 
     <div class="mouse-icon hidden-xs">
 				<div class="scroll"></div>
