undo commit 4ab5cb0bc8066f6634ba64ce388a795f86d0ab4b

--- a/html/index.html
+++ b/html/index.html
@@ -48,7 +48,7 @@
             <a href="index.html"><img src="img/q3.png" alt="Logo"></a>
           </div>
           <div class="col-xs-6 signin text-right navbar-nav">
-            <a class="margin-20right" href="javascript:void(open('q_bootstrap_todo/index.html','_top'))">Queue</a>
+            <a href="javascript:void(open('q_bootstrap_todo/index.html','_top'))">Queue</a>
             <a href="javascript:void(open('q_login/index.html','_self'))">Account</a>
           </div>
         </div>
@@ -78,7 +78,7 @@
         </div>
       </div>
     </header>
-    
+
     <div id="messagebox"></div>
 
     <div class="mouse-icon hidden-xs">
