--- a/html/q_bootstrap_todo/index.html
+++ b/html/q_bootstrap_todo/index.html
@@ -33,7 +33,7 @@
           <a href="index.html"><img src="../img/q3.png" alt="Logo"></a>
         </div>
         <div class="col-xs-6 signin text-right navbar-nav">
-          <a href="javascript:void(open('../index.html','_top'))">Home Page</a>
+          <a href="javascript:void(open('../index.html','_top'))">Home</a>
           <a href="#">Account</a>
         </div>
       </div>
