Fixing link on queue page

--- a/html/q_bootstrap_todo/index.html
+++ b/html/q_bootstrap_todo/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <title>q - Life Organizer</title>
   <link rel="stylesheet" href="../css/dialogbox.css">
+  <link rel="stylesheet" href="../css/animate.css">
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <link rel="stylesheet" href="../css/font-awesome.min.css">
+  <link rel="stylesheet" href="../css/main.css">
+
   <script src="js/index.js"></script>
 </head>
 
@@ -33,8 +38,8 @@
           <a href="index.html"><img src="../img/q3.png" alt="Logo"></a>
         </div>
         <div class="col-xs-6 signin text-right navbar-nav">
-          <a href="javascript:void(open('../index.html','_top'))">Home Page</a>
-          <a href="#">Account</a>
+          <a href="javascript:void(open('../index.html','_top'))">Home</a>
+          <a href="javascript:void(open('../q_login/index.html','_top'))">Account</a>
         </div>
       </div>
       
