--- a/html/q_bootstrap_todo/index.html
+++ b/html/q_bootstrap_todo/index.html
@@ -81,7 +81,7 @@
         </div>
         <div class="col-xs-6 signin text-right navbar-nav">
           <a href="javascript:void(open('../index.html','_top'))">Home</a>
-          <a href="javascript:void(open('../q_login/index.html','_top'))">Account</a>
+          <a href="javascript:void(open('../q_logout/index.html','_top'))">Logout</a>
         </div>
       </div>
       
