--- a/html/q_logout/index.html
+++ b/html/q_logout/index.html
@@ -23,23 +23,14 @@
         <div class="col-xs-6">
           <a href="index.html"><img src="../img/q3.png" alt="Logo"></a>
         </div>
-        <div class="col-xs-6 signin text-right navbar-nav">
-          <a href="javascript:void(open('../index.html','_top'))">Home</a>
-        </div>
       </div>
 
-      <div class="row header-info" style="background-color: rgba(0,0,0,.3); padding-bottom: 3em">
+      <div class="row header-info" style="background-color: rgba(0,0,0,.3); padding-bottom: 3em; margin-bottom: 16em">
         <div class="col-sm-10 col-sm-offset-1 text-center">
-          <h1 class="wow fadeIn">Login</h1>
+          <h1 class="wow fadeIn">Logout - Are you sure?</h1>
           <br />
-          <form name="loginform" action="" method="get" class="todo-form">
-              <p>Enter User Info:</p>
-              </br>
-              <p><input type="text" name="usernamebox" value="username"></p>
-              <p><input type="password" name="passwordbox" value="password"></p>
-              <input class="btn btn-secondary btn-lg scroll" type="button" name="button" value="Log in!" onClick="doLogin(this.form)">
-              <p id="loginresp" style="padding-top: 1.5em;">Log in, first!</p>
-          </form>
+          <input class="btn btn-secondary btn-lg" type="button" id="logoutb" value="Yes!" onClick="doLogin(this.form)">
+	  <a class="btn btn-secondary btn-lg" id="goback" href="javascript:void(open('../index.html','_top'))">Wait no take me back!</a>
         </div>
       </div>
     </div>
