--- a/html/q_logout/index.html
+++ b/html/q_logout/index.html
@@ -29,7 +29,7 @@
         <div class="col-sm-10 col-sm-offset-1 text-center">
           <h1 class="wow fadeIn">Logout - Are you sure?</h1>
           <br />
-          <input class="btn btn-secondary btn-lg" type="button" id="logoutb" value="Yes!" onClick="doLogin(this.form)">
+          <input class="btn btn-secondary btn-lg" type="button" id="logoutb" value="Yes!" onClick="clearListCookies()">
 	  <a class="btn btn-secondary btn-lg" id="goback" href="javascript:void(open('../index.html','_top'))">Wait no take me back!</a>
         </div>
       </div>
