Fixed logout link.

--- a/html/q_logout/index.html
+++ b/html/q_logout/index.html
@@ -27,7 +27,7 @@
 
       <div class="row header-info" style="background-color: rgba(0,0,0,.3); padding-bottom: 3em; margin-bottom: 16em">
         <div class="col-sm-10 col-sm-offset-1 text-center">
-          <h1 class="wow fadeIn">Logout - Are you sure?</h1>
+          <h1 class="wow fadeIn" id="confirmationtext">Logout - Are you sure?</h1>
           <br />
           <input class="btn btn-secondary btn-lg" type="button" id="logoutb" value="Yes!" onClick="clearListCookies()">
 	  <a class="btn btn-secondary btn-lg" id="goback" href="javascript:void(open('../index.html','_top'))">Wait no take me back!</a>
